mjs/tests/invalid_syntax/try_catch.js
try {
  print("a thing")
}
catch (e) {
  // expected output: "Parameter is not a number!"
}
